
Currently deprecated and liable to be removed: 
- bam(...,sparse=TRUE) [1.8-5]
- single penalty tensor product smooths.
- p.type!=0 in summary.gam.

1.8-13

* anova.gam modified to use more appropriate reference degrees of freedom 
  for multiple model call, where possible. Also fixed to allow multiple 
  formulae models and to use -2*logLik in place of `deviance' for 
  general.family models.

* Fix in Vb.corr (2nd order edf correction) for fixed smoothing parameter case.

* added 'all.vars1' to enable terms like s(x$y) in model formulae. 

* modification to gam.fit4 to ignore 'start' if it is immediately worse than 
  'null.coef'.

* Added help file ?one.se.rule on the `one standard error rule' for obtaining 
  smoother models.

* cSplineDes can now accept a 'derivs' argument.

* added drop.intercept handling for multiple formulae (mod by Matteo Fasiolo).

* Faster code used in 'uniquecombs'. Speeds up discretization step in 
  'bam(...,discrete=TRUE)'. Could still be improved for multi-column case.

* 'gam.side' fix to avoid duplication of smooth model matrices to be tested 
  against, when checking for numerical degeneracy. Problem could occasionally 
  cause a failure (especially with bam), when the total matrix to be tested 
  against ended upo with more columns than rows.

* 4 occurances of as.name("model.frame") changed to quote(stats::model.frame)
	
* fix in predict.bamd discrete prediction code to be a bit more relaxed about 
  use of as.factor, etc in formulae.

* fix in predict.gam handling of 'na.action' to avoid trying to get type of
  na.action from name of na.action function - this was fragile to nesting
  and could cause predict.bam to fail in the presence of NA's.

* fix of gam.outer so that general families (e.g. cox.ph) can have all
  their smoothing parameters supplied without then ignoring the penalties!

* fix in multiple formulae handling of fixed smoothing parameters.
